Fixing header jumping between pages

--- a/style-header.css
+++ b/style-header.css
@@ -61,7 +61,9 @@ body{
 	-moz-box-shadow: 0px 4px 5px 0px rgba(20, 20, 20, 0.8);
 	box-shadow: 0px 4px 5px 0px rgba(20, 20, 20, 0.8);
 }
-
+#header-container {
+	height: 490px;	
+}
 /* */
 .site-header .bg-block{
 	display: table;
